--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,15 +1,16 @@
-@import './variables.scss';
-@import './mixin.scss';
-@import './transition.scss';
-@import './element-ui.scss';
-@import './sidebar.scss';
+@import "./variables.scss";
+@import "./mixin.scss";
+@import "./transition.scss";
+@import "./element-ui.scss";
+@import "./sidebar.scss";
 
 body {
   height: 100%;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
+  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB,
+    Microsoft YaHei, Arial, sans-serif;
 }
 
 label {
@@ -62,4 +63,24 @@ div:focus {
 // main-container global css
 .app-container {
   padding: 20px;
+}
+.pagination {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row-reverse;
+}
+.top-btn {
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  > span {
+    padding-left: 20px;
+  }
+}
+.normal-input {
+  width: 150px;
+}
+.full-img{
+  width:100%;
+  height:100%
 }
